# hass_sensorlinx

./: .gitignore  README.md  __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  hacs.json  info.md  manifest.json  pyproject.toml  requirements.txt  sensor.py  switch.py
tests/: test_config_flow.py
translations/: en.json
